--- a/painting/fieldtrip.html
+++ b/painting/fieldtrip.html
@@ -58,24 +58,40 @@
 	</div>	
 	<div class="about">
 		<div class="container">
-			<span style="background-color:rgb(255, 255, 255)" >
-			Field trip practices<br />
-			下乡写生练习<br /></span>
+			<p><strong>Field Trip Practice | mix materials on paper</strong><br />
+				2019 the 5th Studio of Oil Painting field trip practice<br />
+				Apr./May. 2019<br />
+			</p>————
+				<p>
+				<strong>前言｜周力</strong><br><br>
+				写生，尤其是下乡，总给人是去“画油菜花”的感觉，其实新的“上山下乡”是为了摆脱课堂的惯性思维，回到大自然经时间淘洗之后留下的珍贵遗迹中，体会和感悟超越具体形式的本质和力量。<br>
+				“我面对大自然所画下的这幅草图，使其他作品都显得相形见绌。我确实感觉到，前辈大师们过去所画的户外景物都被表现得含糊不清，它们给我二的感觉都不是真实的，首先是不是具备大自然所提供的原来面貌。”“一个人在纯思辨理论的讨论中往往会迷失方向。” ——塞尚<Br>
+				作为当代艺术家，要有丰富的思考与见识；既要从历史中吸取养分，又不能停留在历史的遗存中，而应该是面对今天与未来做出新的创造。<br>
+				从四川成都几个美术馆开始，学生们逐渐理解了当代艺术和研究的严谨性。参观羌寨时，了解了古建筑的合理结构，如何使其在汶川大地震中也屹立不倒。敦煌壁画给人类留下了极珍贵的美学，人类学，历史，及文史资料，学生们身临其境，受益匪浅。<br>		
+				在自然和历史的现场，我们更容易体悟到经验与感受的转换方式，以及观看，思考和动手的重要性。艺术源于生活，平行于生活，又或高于生活；每个人的思考和角度不同，看到的世界也不同。重要的是有的放矢，不断明确自己的道路。希望每段课程都是同学们为自己未来的路所埋下的一颗种子，随时待放。<br>
+
+				<p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
-			<img src="../image/painting/field trip/field trip-1.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/field trip/field trip-2.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/field trip/field trip-3.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/field trip/field trip-4.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/field trip/field trip-13.png" alt="" width="660px">
+			<p style="text-align:right">
+				<strong>exhbition wall | 展览现场</strong><br><br>
+			</p>
+			<img src="../image/painting/field trip/field trip-14.png" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/field trip/field trip-15.png" alt="" width="660px"><p>&nbsp;</p>
+			<img src="../image/painting/field trip/field trip-1.jpg" alt=""><p>&nbsp;</p>
+			<img src="../image/painting/field trip/field trip-2.jpg" alt=""><p>&nbsp;</p>
+			<img src="../image/painting/field trip/field trip-3.jpg" alt=""><p>&nbsp;</p>
+			<img src="../image/painting/field trip/field trip-4.jpg" alt=""><p>&nbsp;</p>
 			<img src="../image/painting/field trip/field trip-5.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/field trip/field trip-6.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<!--<img src="../image/painting/field trip/field trip-6.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<img src="../image/painting/field trip/field trip-7.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<img src="../image/painting/field trip/field trip-8.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<img src="../image/painting/field trip/field trip-9.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<img src="../image/painting/field trip/field trip-10.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<img src="../image/painting/field trip/field trip-11.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-			<img src="../image/painting/field trip/field trip-12.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+			<img src="../image/painting/field trip/field trip-12.jpg" alt=""><br /><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>-->
 		</div>
 			
 		<p>&nbsp;</p> 
