--- a/index-design.html
+++ b/index-design.html
@@ -63,6 +63,11 @@
 
 			</p>
 		</div>
+		<div class="writingfront-writing">
+			<img src="../forganlu.github.io/image/painting/mepaint.JPG" alt="" width="600px"><br/>
+			29th Sept. 2019 / in GAFA / credit to Liang Qitao
+
+		</div>
 	</div>
 	
 		
