--- a/index-painting.html
+++ b/index-painting.html
@@ -67,6 +67,11 @@
 			Incompletely released.<br />
 			不完全发布。</span>
 	</div>
+	<div class="writingfront-writing">
+		<img src="../forganlu.github.io/image/painting/mepaint.JPG" alt="" width="400px"><br/>
+		29th Sept. 2019 / in GAFA / credit to Liang Qitao
+
+	</div>
 	</div>
 	
 		
