--- a/Mediabased/kinfeasting.html
+++ b/Mediabased/kinfeasting.html
@@ -55,7 +55,7 @@
 	</div>	
 
 	<div class="about">
-		<div class="container">
+		<div class="writingfront-writing">
 			<p><span  ><strong>
 			 Kin Feasting</strong> | Multimedia-Performance<br />
 			 One Minute Space (Athens, GR)<br/>
