--- a/Mediabased/ritzsdream.html
+++ b/Mediabased/ritzsdream.html
@@ -53,7 +53,7 @@
 			
 	</div>	
 	<div class="about">
-		<div class="container" >
+		<div class="writingfront-writing" >
 			<p><strong>
 				Ritz's Dream</strong> | Video & Photography<br />
 				Solo exhibited in The Fifth Studio Exhibition Hall of GAFA<br/>
