--- a/Mediabased/liberatedfish.html
+++ b/Mediabased/liberatedfish.html
@@ -56,7 +56,7 @@
 	</div>	
 
 	<div class="about">
-		<div class="container">
+		<div class="writingfront-writing">
 			<p></p><span  ><strong>
 			 Liberated Fish</strong> | Video & Photography<br />
 			 Dec. 2021
