--- a/Mediabased/foodmemory.html
+++ b/Mediabased/foodmemory.html
@@ -67,10 +67,8 @@
 			</p><br /><br />
 			<strong>Process</strong>
 			<p>Four channels videos, by filming three kinds of foods eaten by actor, to showcase three different sound of those specific foods: apple, bread, sparking water and chips respectively. But the original sound of food will be covered by its different kind. For example, the sound of video of eating apple would be replaced by eating chips, and the sound of video of eating chips would be replaced by eating bread. Therefore, there will be some misunderstandings between the matching of food and its sound, then the disorder and confusion will be arose, try to find out if audiences would get this confusion or not.</p><br /><br />
-			<iframe width="660px" height="440px" src="https://www.youtube.com/embed/0_395VgwDBg?start=1" title="Food Memory" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br /><br />
-			<video src="">
-				<source=>
-			</video>
+			<iframe width="660px" height="440px" src="https://www.youtube.com/embed/0_395VgwDBg?start=1" title="Food Memory" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br /><br /><br>
+			
 			<strong>Responsibility</strong><br />
 			Cast: Jiang Dingyuan<br />
 			Shooting: Gan Lu<br /><br />
