--- a/Mediabased/ritzsdream.html
+++ b/Mediabased/ritzsdream.html
@@ -36,6 +36,7 @@
 			<!--<li><a href="../forganlu.github.io/index-design.html"><span  >设计/Deisgn</span></a></li>-->
 			<li><a href="../forganlu.github.io/index-mediabased.html"><span  >媒体/Meida Based</span></a>
                 <ul>
+					<li><a href="../Mediabased/nightmare.html">Nightmare</a></li>
                     <li><a href="../Mediabased/foodmemory.html">Food memory</a></li>
 					<li><a href="../Mediabased/liberatedfish.html">Liberated Fish</a></li>
 					<li><a href="../Mediabased/kinfeasting.html">Kin Feasting</a> </li>
