--- a/Mediabased/ARFOW.html
+++ b/Mediabased/ARFOW.html
@@ -64,14 +64,21 @@
 			 Oct. 2021
 			</p><br /><br />
 			<p>
-				Description: As a collective we are interested in the topics concerning forming of identities through analog and digital spheres, and power structures surrounding those identities. As a group formed by feminities we were aiming to create a space of exploration, for all the voices to be heard without discrimination. Space for one to experiment, to try on different versions of oneself in a safer setting, relax, and enjoy a cup of tea. To talk or lie down or stare into one’s reflection for a minute or two hours. Combining spatial design with performance. A rhythmic chant including words and sentenced that emerged in the process of collaborative healing. Words of anger, dissatisfaction but also empowerment and scream for better future. Simple powerful sentences, combined with simple rhythmal clapping and stepping. Speaking from the feminine position, coming in with personal stories and experiences relative to gender identity understood through multicultural lense, we aimed at providing a space for a breath.<br/><br/>	
+			————<Br>
+			<strong>Description</strong><br><br>
+			As a collective we are interested in the topics concerning forming of identities through analog and digital spheres, and power structures surrounding those identities. As a group formed by feminities we were aiming to create a space of exploration, for all the voices to be heard without discrimination. Space for one to experiment, to try on different versions of oneself in a safer setting, relax, and enjoy a cup of tea. To talk or lie down or stare into one’s reflection for a minute or two hours. Combining spatial design with performance. A rhythmic chant including words and sentenced that emerged in the process of collaborative healing. Words of anger, dissatisfaction but also empowerment and scream for better future. Simple powerful sentences, combined with simple rhythmal clapping and stepping. Speaking from the feminine position, coming in with personal stories and experiences relative to gender identity understood through multicultural lense, we aimed at providing a space for a breath.<br/><br/>	
 			</p><br />
-			<p><strong>Performing</strong></p><br /><br />
+			
+			<p>
+			————<Br>
+			<strong>Performing</strong><br /><br />
 			<img src="../image/mediabased/ARFOW/yris&Wrnk.JPG" alt="">
 			<img src="../image/mediabased/ARFOW/ruizhao.JPG" alt="">
 			<img src="../image/mediabased/ARFOW/greek.JPG" alt="">
 			<img src="../image/mediabased/ARFOW/lulu.JPG" alt=""width="660px"><p>&nbsp;</p>
+		</p>
 			<p>
+				———<Br>
 				<strong>Chant</strong><br/><br/>
 				(Quietly to the audience)<br/>
 				<strong>All</strong><br/>
@@ -118,15 +125,19 @@
 				end<br/>
 
 			</p><p>&nbsp;</p>
-			<p><strong>the Whole room & Leisure time</strong></p><br /><br />
+			<p>
+				———<Br>
+			<strong>the Whole room & Leisure time</strong></p><br /><br />
 			<img src="../image/mediabased/ARFOW/1.JPG" alt=""width="660px">
 			<img src="../image/mediabased/ARFOW/2.JPG" alt="">
 			<img src="../image/mediabased/ARFOW/3.JPG" alt="">
-			<img src="../image/mediabased/ARFOW/4.JPG" alt=""><p>&nbsp;</p>
+			<img src="../image/mediabased/ARFOW/4.JPG" alt=""><p>&nbsp;</p><br>
+			———<Br>
 			<strong>Responsibility</strong><br />
 			Chant performing: Yris Apsit, Weronika Przysada, Ruizhao Sun, GAN LU<br/>
 			Others: Hei Ying Mimie CHEUNG, Tanya Varreri, Katerina Pataka(online video performing)
 			<br /><p>&nbsp;</p>
+			———<Br>
 			<strong>Reference</strong><br /><br/>
 			<strong>Youtube links</strong><br/>
 			1. <a href="https://www.youtube.com/watch?v=bZBHvMaTiuU">Victoria Santa Cruz- Me gritaron negra/ They called me black (woman)</a><br/>
