--- a/Mediabased/liberatedfish.html
+++ b/Mediabased/liberatedfish.html
@@ -62,21 +62,26 @@
 			 Liberated Fish</strong> | Video & Photography<br />
 			 Dec. 2021
 			</span></p><br /><br />
-			<strong>Line</strong>
-			<p>I heard, ocean is free. I was born in a fish tank, same lifestyle everyday. I try not to think about freedom, it's the thing only marine fish care. That is the performance that only occurs in times of prosperity, not in times of scarcity. The picture of freedom only changes with time. The short-term memory leaves me with no way to think more and deeper, and my friends also lost more memory in the frequent mating. But it doesn't matter, we don't want to keep so many unimportant memories either. I don't have a language. When the humans picked me up out of the water, all I could do was fling my body around as hard as I could. But it only makes me look more delicious. I breathed honestly, pushing hard to absorb the oxygen in the water, the last thing that kept me alive.	<br /><br />
+			<p>
+			———<Br>
+			<strong>Line</strong><br><br>
+			I heard, ocean is free. I was born in a fish tank, same lifestyle everyday. I try not to think about freedom, it's the thing only marine fish care. That is the performance that only occurs in times of prosperity, not in times of scarcity. The picture of freedom only changes with time. The short-term memory leaves me with no way to think more and deeper, and my friends also lost more memory in the frequent mating. But it doesn't matter, we don't want to keep so many unimportant memories either. I don't have a language. When the humans picked me up out of the water, all I could do was fling my body around as hard as I could. But it only makes me look more delicious. I breathed honestly, pushing hard to absorb the oxygen in the water, the last thing that kept me alive.	<br /><br />
 				human's words again, that there is equality between creatures. But when this is said, equality loses its meaning. <br /><br />
 				It doesn't matter if it happens or not, disappointment will still running high. Do freedom and equality really need to be discussed in our case? Inequality's exit is because there is always a top and a bottom of the food chain. We need each other to consume, to eat and to excrete. Somehow, it has long been clear to scientists that we are just the substitute for the health of humans, and we are ultimately just a part of the human body.<br /><br />
 				Then what else do you expect from them?<br /><br />
 				Expecting be protected. I don't care how dose my flash taste at the end, either care in what way they will cook me, because I do know I will be a delicious dish at the end. But I hope before that, they should admit that they need us. We are still noble after such a long time, not because our brain is small, but because we don't care too much about freedom. Caring too much instead just pushes themselves into more savagery place.<br/><br />
 			</p><br />
-			<p><strong>Video</strong></p><br /><br />
-			<p><iframe src="https://player.vimeo.com/video/651509101?h=4bc708767b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="660" height="371" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="liberated fish"></iframe></p><br /><br />
+			<p>
+			———<Br>
+				<strong>Video</strong><br /><br />
+			<iframe src="https://player.vimeo.com/video/651509101?h=4bc708767b&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="660" height="371" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="liberated fish"></iframe></p><br /><br />
 			<!--<p><strong>Photography</strong></p><br /><br />
 			<img src="../image/mediabased/liberatedfish/lf-1.jpg" alt=""><p>&nbsp;</p>
 			<img src="../image/mediabased/liberatedfish/lf-2.jpg" alt=""><p>&nbsp;</p>
 			<img src="../image/mediabased/liberatedfish/lf-3.jpg" alt=""><p>&nbsp;</p>
 			<img src="../image/mediabased/liberatedfish/lf-4.jpg" alt=""><p>&nbsp;</p>-->
 			
+			———<Br>
 			<strong>Reference</strong><br />
 			1. Lovett, F. (2015). Freedom Is Power: Liberty Through Political Representation. By Lawrence Hamilton. Cambridge: Cambridge University Press, 2014, 231p. Perspectives on Politics, 13(2), 515-516. doi:10.1017/S1537592715000584<br />
 			2. <a href="http://marialoizidou.com/#/?o=1">A Monumental Lightness</a> by Maria Loizidou
