--- a/index-contact.html
+++ b/index-contact.html
@@ -53,11 +53,11 @@
 		
 			<span style="background-color:white" ><strong>GAN LU / 甘 露</strong></span><br />
 			<p></p> 
-			<!--Website: <span style="background-color:rgb(255, 255, 255)" ><a href="../forganlu.github.io/index.html"><strong>www.forganlu.com</strong></a></span><br />-->
-			Don't contact me if you don't want to invite me to make an exhibition.<br/><br/>
+			
 			Email: <span style="background-color:rgb(255, 255, 255)" ><a href="mailto:ganlu2525@outlook.com"> <strong>ganlu2525@outlook.com</strong></a></span><br />
 			WeChat: <a href="../forganlu.github.io/index-contact-wechat.html"><strong>ganlu2525</strong></a></span><br>
-			<a href="http://forganlu.bandcamp.com"><strong>forganlu</strong>.bandcamp</a>
+			Instagram: <a href="https://www.instagram.com/forganlu/">@forganlu</a>
+			New to sound, but: <a href="http://forganlu.bandcamp.com"><strong>forganlu</strong>.bandcamp</a>
 
 		
 	</p>
