--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			</p>
 		</div>
 		<div class="container"><p>&nbsp;</p>
-			<img src="../forganlu.github.io/image/IMG_9749.png" alt=""><p>&nbsp;</p>
+			<img src="../forganlu.github.io/image/IMG_9749.png" alt="" width="440px"><p>&nbsp;</p>
 		</div>
 	</div>
 	
