--- a/index-about.html
+++ b/index-about.html
@@ -66,14 +66,15 @@
 			<span style="background-color:white" ><strong>Selected Exhibition</strong></span><br />
 			<!--2022  <strong></strong> - SCM MFA graduation exhibition - Run Run Shaw Creative Center (HK.SAR,CN)<br/>-->
 			<br />
-			2021  <strong>Micro-RELATION LAB</strong> - 2021 Transculture Collabration Final Project Exhibition - OMS (Athens,GR)<br />
+			<a href="https://www.scm.cityu.edu.hk/MFA-show-2022"> 2022 <strong>The Waste Land</strong> - SCM MFA graduation show - Run Run Shaw CMC (HK)</a><br />
+			<a href="https://www.currentathens.gr/events/event/3433-micro-relations-lab-mikro-schesiako-ergastirio"> 2021  <strong>Micro-RELATION LAB</strong> - 2021 Transculture Collabration Final Project Exhibition - OMS (Athens,GR)</a><br />
 			2021  <strong>Saganaki on Ice</strong> - 2021 Transculture Collabration - Communitism (Athens,GR)<br />
-			2021  <strong>Furment</strong> - SCM MFA group show - Run Run Shaw Creative Center (HK.SAR,CN)<br />
+			2021  <strong>Furment</strong> - SCM MFA show - Run Run Shaw CMC (HK)<br />
 			<br />
-			2020  <strong>Painting for the Wind</strong> - The 23rd Workshop Project - OCT Boxes Art Museum (Foshan,CN)<br />
+			<a href="https://www.trueart.com/news/391483.html">2020  <strong>Painting for the Wind</strong> - The 23rd Workshop Project - OCT Boxes Art Museum (Foshan,CN)</a><br />
 			2020  <strong>Touch on heat</strong> - The first exhibition of selected graduates of CAFA x GAFA (Guangzhou,CN)<br />
 			2020  <strong>The choice of the graduation star in 2020</strong> - OCAT Shenzhen OCT Harbour Exhibition Site – Boxes Art Space<br />
-			2020  <strong>Wait and Hope</strong> - Da Vinci Talk - Te Kauhanganui o QBE Gallery (Auckland,NZ)<br />
+			<a href="https://www.davincitalk.com/copy-of-dvt-2021">2020  <strong>Wait and Hope</strong> - Da Vinci Talk - Te Kauhanganui o QBE Gallery (Auckland,NZ)</a> <br />
 			2020  <strong>GAFA Graduation Exhibition</strong> - GAFA online Art museum<br />
 			<br />
 			2019  <strong>Visual Games</strong> - Foshan Guicheng Art Museum (Foshan,CN)<br />
