--- a/index-mediabased.html
+++ b/index-mediabased.html
@@ -63,8 +63,8 @@
 		</div>
 		<div class="container">
 			
-			<img src="../forganlu.github.io/image/mediabased/self.JPG" alt="" width="400px"><br/>
-			29th Mar. 2022 / credit to Jiang Dingyuan.
+			<!--<img src="../forganlu.github.io/image/mediabased/self.JPG" alt="" width="400px"><br/> 
+			29th Mar. 2022 / credit to Jiang Dingyuan.-->
 		</div>
 	</div>
 	
