--- a/index-about.html
+++ b/index-about.html
@@ -50,7 +50,7 @@
 		
 </div>
 <div class="about">
-	<div class="writingfront">
+	<div class="writingfront-writing">
 		<p>
 		<span style="background-color:white" >
 			<strong>GAN LU / 甘 露</strong><br />
@@ -58,15 +58,16 @@
 			b.1998, China.<br />
 			Hong Kong based<br />
 			<br />
-			Guangzhou Academic of Fine Art - Oil Painting<br />
-			SCM Hong Kong - ZHdK Switzerland transcultural collaboration exchange programme - Athens,GR<br />
+			Focusing on her self-growth and experience, her work manifests as a perceptive understanding of the methods of metaphor, simulation, and changing perspectives.<br/>
 			<br />
 			<br />
 			<br />
 			<span style="background-color:white" ><strong>Selected Exhibition</strong></span><br />
 			<!--2022  <strong></strong> - SCM MFA graduation exhibition - Run Run Shaw Creative Center (HK.SAR,CN)<br/>-->
 			<br />
+			2022  <strong>HKFORWORD22</strong> - 10 Chancery Lane Gallery (HK)<br />
 			<a href="https://www.scm.cityu.edu.hk/MFA-show-2022"> 2022 <strong>The Waste Land</strong> - SCM MFA graduation show - Run Run Shaw CMC (HK)</a><br />
+			<br />
 			<a href="https://www.currentathens.gr/events/event/3433-micro-relations-lab-mikro-schesiako-ergastirio"> 2021  <strong>Micro-RELATION LAB</strong> - 2021 Transculture Collabration Final Project Exhibition - OMS (Athens,GR)</a><br />
 			2021  <strong>Saganaki on Ice</strong> - 2021 Transculture Collabration - Communitism (Athens,GR)<br />
 			2021  <strong>Furment</strong> - SCM MFA show - Run Run Shaw CMC (HK)<br />
@@ -81,8 +82,17 @@
 			<br />
 			2018  <strong>東方·來信 Inter-Youth</strong> - China Academic of Fine Art Museum (Hangzhou,CN)<br />
 			2018  <strong>Ritz’s Dream</strong> (solo) - The Fifth Studio Exhibition Hall of GAFA (Guangzhou,CN)<br />
+			<br />
 			2017  <strong>the Fifth Studio</strong> - the Art Museum of Guangzhou Academy of Fine Arts (Guangzhou,CN)<br />
+			<br />
+			<br />
+			<br />
+			<strong>Education</strong><br/>
+			Oil Painting - Guangzhou Academic of Fine Art<br />
+			Creative Media - SCM CityU HK<br/>
+			SCM Hong Kong - ZHdK Switzerland transcultural collaboration exchange programme - Athens,GR<br />
 			
+			<br/>
 		</span>
 		</p>
 	
