--- a/index.html
+++ b/index.html
@@ -50,11 +50,13 @@
 	<div class="about">
 		<div class="writingfront">
 			<p>
-				<span style="background-color:rgb(60, 255, 0)" ><strong> Currently no news. and <a href="../forganlu.github.io/index-mediabased.html">Media-based</a> projects was updated.</strong> (Mar. 2022)</span><br />
+				<span style="background-color:rgb(60, 255, 0)" ><strong> Currently no news. and <a href="../forganlu.github.io/index-mediabased.html">Media-based</a> projects was updated.</strong> (Mar. 2022) <br/>
+				This website coded by hand, you will leave no record.<br/>
+				</span><br />
 				
 			</p>
 		</div>
-		<div class="container"><p>&nbsp;</p>
+		<div class="container"><p>&nbsp;</p><br/>
 			<img src="../forganlu.github.io/image/IMG_9749.png" alt="" width="440px"><p>&nbsp;</p>
 		</div>
 	</div>
