--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
 			</p>
 		</div>
 		<div class="container"><p>&nbsp;</p><br/>
-			<img src="../forganlu.github.io/image/IMG_9749.png" alt="" width="440px"><p>&nbsp;</p>
+			<img src="../forganlu.github.io/image/IMG_9749.png" alt="" width="440px"><br/>
+				《樱桃与金刚》 -- 廖伟棠
+			<p>&nbsp;</p>
 		</div>
 	</div>
 	
