--- a/index-about.html
+++ b/index-about.html
@@ -75,6 +75,7 @@
 			<a href="https://www.trueart.com/news/391483.html">2020  <strong>Painting for the Wind</strong> - The 23rd Workshop Project - OCT Boxes Art Museum (Foshan,CN)</a><br />
 			2020  <strong>Touch on heat</strong> - The first exhibition of selected graduates of CAFA x GAFA (Guangzhou,CN)<br />
 			2020  <strong>The choice of the graduation star in 2020</strong> - OCAT Shenzhen OCT Harbour Exhibition Site – Boxes Art Space<br />
+			2020  <strong>Dayi Sketch Award</strong> - The First Edition of the School of Painting and Drawing in GAFA (Guangzhou, CN) <br />
 			<a href="https://www.davincitalk.com/copy-of-dvt-2021">2020  <strong>Wait and Hope</strong> - Da Vinci Talk - Te Kauhanganui o QBE Gallery (Auckland,NZ)</a> <br />
 			2020  <strong>GAFA Graduation Exhibition</strong> - GAFA online Art museum<br />
 			<br />
