--- a/index-about.html
+++ b/index-about.html
@@ -65,6 +65,7 @@
 			<span style="background-color:white" ><strong>Selected Exhibition</strong></span><br />
 			<!--2022  <strong></strong> - SCM MFA graduation exhibition - Run Run Shaw Creative Center (HK.SAR,CN)<br/>-->
 			<br />
+			2022 <strong>Leaping Refrain of La Vie</strong> - The 1st Nebula Project in La Vie Material Life Art Center (Shenzhen, CN) <br />
 			2022  <strong>HKFORWORD22</strong> - 10 Chancery Lane Gallery (HK)<br />
 			<a href="https://www.scm.cityu.edu.hk/MFA-show-2022"> 2022 <strong>The Waste Land</strong> - SCM MFA graduation show - Run Run Shaw CMC (HK)</a><br />
 			<br />
