--- a/painting/EatingGoldfish.html
+++ b/painting/EatingGoldfish.html
@@ -71,6 +71,13 @@
 			<!--<p>评论：</p><br />
 			甘露是个很能画也很能写的女孩，她在广州美术学院第五工作室学习期间，一直喜欢在大画本上画拼贴涂鸦作品：各种来自于杂志，包装纸、照片、彩色卡纸的纸片，后来还有数码照片，加上她大笔的涂抹和线描，都变得欢快跃动，一如她的性格。她把这种画叫简笔画。后来，她又喜欢上写故事，创造各种人物，把故事当作创作图画的线索来源和背景去看待，甚至于把文字和图像直接放在一起，这锻炼了她对这两种语言的理解和使用的能力。为了达至某种书写的快感，甘露就像一个埋首实验室里的炼金术士，把各种看似不能放在一起的东西统统混合，再加上自己的咒语，化学反应滚滚而来，令人无暇应接，更加忘我地欢快跃动。<br /> 
 			<p style="text-align:right">秦晋/文</p><br /> -->
+			<p>&nbsp;</p>
+			<p>&nbsp;</p>
+			<p style="text-align:right">
+				<strong>Exhibited | 展覽於</strong><br />
+				OCT Boxes Art Museum ｜ 盒子美术馆(顺德)<br />
+				La Vie Material Life Art Center | La Vie物质生活艺术中心(深圳)<br />
+				</p>
 			
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
@@ -89,8 +96,8 @@
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 			<img src="../image/painting/Eating Goldfish/Eating Goldfish-3.JPG" alt=""width="660px">
 			<p style="text-align:right">
-				Eating Goldfish-2/2020/Sketch on wood/280×220cm<br />
-				吃金鱼-2/2020/木板素描/280×220cm<br />
+				Eating Goldfish-2/2020/Sketch on wood/250×200cm<br />
+				吃金鱼-2/2020/木板素描/250×200cm<br />
 				</p>
 			<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 
