--- a/painting/TheDeathofBajkal.html
+++ b/painting/TheDeathofBajkal.html
@@ -83,7 +83,7 @@
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<p style="text-align:right">
-				<strong>Exhibited | 展覽於</strong><br />
+				<strong>Exhibited in | 展覽於</strong><br />
 				GAFA museum main page ｜ GAFA2020畢業展<br />
 				OCAT Shenzhen OCT Harbour Exhibition Site (Boxes Art Space) | 深圳盒子藝術空間<br />
 				Da Vinci Talk - Te Kauhanganui o QBE Gallery ｜ 達芬奇對話<br />
