--- a/index-about.html
+++ b/index-about.html
@@ -66,7 +66,7 @@
 			<!--2022  <strong></strong> - SCM MFA graduation exhibition - Run Run Shaw Creative Center (HK.SAR,CN)<br/>-->
 			<br />
 			2022 <strong>Leaping Refrain of La Vie</strong> - The 1st Nebula Project in La Vie Material Life Art Center (Shenzhen, CN) <br />
-			2022  <strong>HKFORWORD22</strong> - 10 Chancery Lane Gallery (HK)<br />
+			<a href="https://www.10chancerylanegallery.com/exhibitions/2022/hkforeword22/en/">2022  <strong>HKFORWORD22</strong> - 10 Chancery Lane Gallery (HK)</a><br />
 			<a href="https://www.scm.cityu.edu.hk/MFA-show-2022"> 2022 <strong>The Waste Land</strong> - SCM MFA graduation show - Run Run Shaw CMC (HK)</a><br />
 			<br />
 			<a href="https://www.currentathens.gr/events/event/3433-micro-relations-lab-mikro-schesiako-ergastirio"> 2021  <strong>Micro-RELATION LAB</strong> - 2021 Transculture Collabration Final Project Exhibition - OMS (Athens,GR)</a><br />
