--- a/index.html
+++ b/index.html
@@ -50,15 +50,16 @@
 	<div class="about">
 		<div class="writingfront">
 			<p>
-				<span style="background-color:rgb(60, 255, 0)" ><strong> Currently no news. and <a href="../forganlu.github.io/index-mediabased.html">Media-based</a> projects was updated.</strong> (Mar. 2022) <br/>
-				This website coded by hand, you will leave no record.<br/>
+				<span style="background-color:rgb(60, 255, 0)" ><strong>  <a href="../forganlu.github.io/portfolio-2020-embedlink-High.pdf">Portfolio Link - Apply for Art Teacher</a> </strong> <br/>
+				<br/>
 				</span><br />
 				
 			</p>
 		</div>
 		<div class="container"><p>&nbsp;</p><br/>
 			<img src="../forganlu.github.io/image/IMG_9749.png" alt="" width="440px"><br/>
-				《樱桃与金刚》 -- 廖伟棠
+				《樱桃与金刚》 -- 廖伟棠<br/>
+				This website coded by hand, you will leave no record.<br/>
 			<p>&nbsp;</p>
 		</div>
 	</div>
