--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<div class="about">
 		<div class="writingfront">
 			<p>
-				<span style="background-color:rgb(60, 255, 0)" ><strong>  <a href="../forganlu.github.io/portfolio-2020-embedlink-High.pdf">Portfolio Link - Apply for Art Teacher</a> </strong> <br/>
+				<span style="background-color:rgb(60, 255, 0)" ><strong>  <a href="../forganlu.github.io/Portfolio_GAN Lu.pdf">Portfolio Link - Apply for Art Teacher</a> </strong> <br/>
 				<br/>
 				</span><br />
 				
