--- a/index.html
+++ b/index.html
@@ -50,13 +50,17 @@
 	<div class="about">
 		<div class="writingfront">
 			<p>
-				<span style="background-color:rgb(60, 255, 0)" ><strong>  <a href="../forganlu.github.io/Portfolio_GAN_Lu_all_right_reserve.pdf">Portfolio Link - Apply for Art Teacher</a> </strong> <br/>
-				<br/>
-				</span><br />
+				<span style="background-color:rgb(60, 255, 0)" ><strong>  <a href="../forganlu.github.io/Portfolio_GAN_Lu_all_right_reserve.pdf">Download Portfolio Link - Apply for Art Teacher</a> </strong> <br/>
+				</span>
+				<span style="background-color:rgb(0, 0, 0) ;"> 
+				<object data="../forganlu.github.io/Portfolio_GAN_Lu_all_right_reserve.pdf" type="application/pdf"  height="200px">
+					  <p>Unable to display PDF file. <a href="../forganlu.github.io/Portfolio_GAN_Lu_all_right_reserve.pdf">Download</a> instead.</p>
+					</object></span>	
+				<br />
 				
 			</p>
 		</div>
-		<div class="container"><p>&nbsp;</p><br/>
+		<div class="container"><p>&nbsp;</p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 			<img src="../forganlu.github.io/image/IMG_9749.png" alt="" width="440px"><br/>
 				《樱桃与金刚》 -- 廖伟棠<br/>
 				This website coded by hand, you will leave no record.<br/>
