--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 			<li><a href="../forganlu.github.io/index-photography.html"><span>摄影/photograph</span></a></li>
 			<li><a href="../forganlu.github.io/index-writing.html"><span>文字/writing</span></a></li><br />
 			<li><a href="../forganlu.github.io/index-about.html"><span>关于/about</span></a></li>
-			<li><a href="../forganlu.github.io/index-contact.html"><span>联络/contact</span></a></li></span>
+			<li><a href="../forganlu.github.io/index-contact.html"><span>联络/contact</span></a></li><br/>
+			<li><span style="background-color:rgb(60, 255, 0)" ><strong>  <a href="../forganlu.github.io/Portfolio_GAN_Lu_all_right_reserve.pdf">Portfolio Link</a> </strong></li>
 		</ul>
 	</div>
 	<!------------------------lefthead--------------------->
@@ -49,18 +50,15 @@
 
 	<div class="about">
 		<div class="writingfront">
+			<!----
 			<p>
 				<span style="background-color:rgb(60, 255, 0)" ><strong>  <a href="../forganlu.github.io/Portfolio_GAN_Lu_all_right_reserve.pdf">Download Portfolio Link - Apply for Art Teacher</a> </strong> <br/>
 				</span>
-				<span style="background-color:rgb(0, 0, 0) ;"> 
-				<object data="../forganlu.github.io/Portfolio_GAN_Lu_all_right_reserve.pdf" type="application/pdf"  height="200px">
-					  <p>Unable to display PDF file. <a href="../forganlu.github.io/Portfolio_GAN_Lu_all_right_reserve.pdf">Download</a> instead.</p>
-					</object></span>	
-				<br />
 				
-			</p>
+				
+			</p>   ---->
 		</div>
-		<div class="container"><p>&nbsp;</p><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+		<div class="container"><p>&nbsp;</p>
 			<img src="../forganlu.github.io/image/IMG_9749.png" alt="" width="440px"><br/>
 				《樱桃与金刚》 -- 廖伟棠<br/>
 				This website coded by hand, you will leave no record.<br/>
