--- a/index-about.html
+++ b/index-about.html
@@ -56,7 +56,7 @@
 			<strong>GAN LU / 甘 露</strong><br />
 			<br />
 			b.1998, China.<br />
-			Hong Kong based<br />
+			Currently in Berlin<br />
 			<br />
 			Focusing on her self-growth and experience, her work manifests as a perceptive understanding of the methods of metaphor, simulation, and changing perspectives.<br/>
 			<br />
