--- a/index-contact.html
+++ b/index-contact.html
@@ -55,9 +55,9 @@
 			<p></p> 
 			
 			Email: <span style="background-color:rgb(255, 255, 255)" ><a href="mailto:ganlu2525@outlook.com"> <strong>ganlu2525@outlook.com</strong></a></span><br />
-			Instagram: <a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a></span><br>
-			WeChat: <a href="../forganlu.github.io/index-contact-wechat.html"><strong>ganlu2525</strong></a></span><br>
-			New to sound, but: <a href="http://forganlu.bandcamp.com"><strong>forganlu</strong>.bandcamp</a>
+			<!--Instagram: <a href="https://www.instagram.com/forganlu/"><strong>@forganlu</strong></a></span><br>
+			WeChat: <a href="../forganlu.github.io/index-contact-wechat.html"><strong>ganlu2525</strong></a></span><br> -->
+			
 
 		
 	</p>
